# skie

./: Cargo.toml  LICENSE  README.md
common/: Cargo.toml
common/src/: config.rs  lib.rs
crypto_plugin/: Cargo.toml
crypto_plugin/src/: lib.rs
ctl/: Cargo.toml
ctl/src/: lib.rs
diff-store/: Cargo.toml
diff-store/db/migrations/: 01_create_tables.sql
diff-store/migrations/: 001_init.sql
diff-store/src/: chunk_store.rs  file_section.rs  file_store.rs  lib.rs
diff-store/tests/: test_chunking.rs  test_indexing.rs
diff-store/tests/common/: mod.rs
plugin/: Cargo.toml
plugin/src/: lib.rs
service/: Cargo.toml
service/src/: lib.rs  main.rs  plugin.rs  reactor.rs
service/tests/: config_tests.rs
skie-cli/: Cargo.toml
skie-common/: Cargo.toml
skie-common/src/: config.rs  lib.rs
skie-index/: Cargo.toml
skie-index/benches/: hash_engine_benchmark_mb.rs
skie-index/src/: hash_engine.rs  index_store.rs  lib.rs
skie-index/tests/: test_hash_engine.rs
skie-service/: Cargo.toml
skie-service/src/: main.rs
store/: Cargo.toml
store/db/migrations/: 01_create_tables.sql
store/src/: chunk_store.rs  file_path.rs  file_section.rs  file_store.rs  lib.rs
store/tests/: test_chunking.rs  test_indexing.rs
store/tests/store_test_common/: mod.rs
