[workspace]
members = [
    "skie-service",
    "skie-cli",
    "skie-index", "skie-common",
]
resolver = "2"

[workspace.dependencies]
skie-common = {path = "skie-common"}
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
blake3 =  { version = "1.8.3", features = ["serde"] }
uuid = { version = "1.20.0", features = ["serde"] }