[package]
name = "diff-store"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = { workspace = true }
thiserror = { workspace = true }
skie-common = { workspace = true }
rusqlite = "0.38.0"

[features]
default = ["s3-chunk-storage"]
s3-chunk-storage = []
local-chunk-storage = []
memory-storage = []