[package]
name = "diff-store"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = { workspace = true }
thiserror = { workspace = true }
skie-common = { workspace = true }
sqlx = { workspace = true }
async-trait = "0.1.89"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
default = ["s3-chunk-storage"]
s3-chunk-storage = []
local-chunk-storage = []
memory-storage = []
