[package]
name = "skie-index"
version = "0.1.0"
edition = "2024"

[dependencies]
skie-common = { workspace = true }
thiserror = { workspace = true }
rayon = "1"
fastcdc = "3"
crossbeam-channel = "0.5"
blake3 = { workspace = true } 
uuid = { workspace = true, features = ["v4"] }
loro = "1.10.3"
rusqlite = "0.38.0"
postcard = "1.0.0"

[dev-dependencies]
rand = "0.9"
tempfile = "3"
criterion = "0.8"

[[bench]]
name = "hash_engine_benchmark_mb"
harness = false